--- a/ShuttleBus.Protal/ShuttleBus.Protal.csproj
+++ b/ShuttleBus.Protal/ShuttleBus.Protal.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\scripts\controllers\busRoutes\busRoutesCtrl.js" />
+    <Content Include="app\scripts\services\busRouteService.js" />
     <Content Include="app\scripts\vendor\angularJS\angular-1.4.0-beta.6\angular-animate.min.js.map" />
     <Content Include="app\scripts\vendor\angularJS\angular-1.4.0-beta.6\angular-aria.min.js.map" />
     <Content Include="app\scripts\vendor\angularJS\angular-1.4.0-beta.6\angular-cookies.min.js.map" />
@@ -93,10 +95,7 @@
     <Content Include="app\scripts\directives\gallery\galleryCtrl.js" />
     <Content Include="app\scripts\directives\gallery\galleryDirective.js" />
     <Content Include="app\scripts\directives\gallery\galleryModule.js" />
-    <Content Include="app\scripts\services\galleryService.js" />
     <Content Include="app\scripts\services\logger.js" />
-    <Content Include="app\scripts\services\mailService.js" />
-    <Content Include="app\scripts\services\postService.js" />
     <Content Include="app\scripts\services\servicesModule.js" />
     <Content Include="app\scripts\services\userService.js" />
     <Content Include="app\scripts\vendor\angularJS\angular-1.4.0-beta.6\angular-animate.js" />
@@ -141,6 +140,7 @@
     <Content Include="app\scripts\vendor\uiBootstrap\ui-bootstrap-tpls-0.12.1.js" />
     <Content Include="app\scripts\vendor\uiBootstrap\ui-bootstrap-tpls-0.12.1.min.js" />
     <Content Include="app\styles\style.css" />
+    <Content Include="app\views\busRoute\busRoutes.html" />
     <Content Include="app\views\main.html" />
     <Content Include="app\views\user\editUserInfo.html" />
     <Content Include="app\views\user\userInfo.html" />
