--- a/ShuttleBus.Protal/ShuttleBus.Protal.csproj
+++ b/ShuttleBus.Protal/ShuttleBus.Protal.csproj
@@ -57,7 +57,13 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\images\loading-x.gif" />
+    <Content Include="app\images\loading.gif" />
+    <Content Include="app\scripts\controllers\bus\busCtrl.js" />
+    <Content Include="app\scripts\controllers\bus\busesCtrl.js" />
+    <Content Include="app\scripts\controllers\busRoutes\busRouteCtrl.js" />
     <Content Include="app\scripts\controllers\busRoutes\busRoutesCtrl.js" />
+    <Content Include="app\scripts\services\busService.js" />
     <Content Include="app\scripts\services\busRouteService.js" />
     <Content Include="app\scripts\vendor\angularJS\angular-1.4.0-beta.6\angular-animate.min.js.map" />
     <Content Include="app\scripts\vendor\angularJS\angular-1.4.0-beta.6\angular-aria.min.js.map" />
@@ -140,7 +146,10 @@
     <Content Include="app\scripts\vendor\uiBootstrap\ui-bootstrap-tpls-0.12.1.js" />
     <Content Include="app\scripts\vendor\uiBootstrap\ui-bootstrap-tpls-0.12.1.min.js" />
     <Content Include="app\styles\style.css" />
+    <Content Include="app\views\busRoute\busRoute.html" />
     <Content Include="app\views\busRoute\busRoutes.html" />
+    <Content Include="app\views\bus\bus.html" />
+    <Content Include="app\views\bus\buses.html" />
     <Content Include="app\views\main.html" />
     <Content Include="app\views\user\editUserInfo.html" />
     <Content Include="app\views\user\userInfo.html" />
@@ -152,7 +161,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="app\images\" />
     <Folder Include="app\scripts\filters\" />
   </ItemGroup>
   <PropertyGroup>
